# api

./: .gitignore  Cargo.toml  README.md
scraper/: go.mod  main.go
src/: barcode_seeds.rs  brand_data.rs  brands.rs  db.rs  error.rs  main.rs  models.rs  state.rs
src/handlers/: barcode.rs  brands.rs  materials.rs  mod.rs  stats.rs
